# simple-repository-server

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE_HEADER  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml  python-publish.yml
simple_repository_server/: __init__.py  __main__.py  _http_response_iterator.py  app.py  http_response_iterator.py  utils.py
simple_repository_server/routers/: simple.py
simple_repository_server/tests/: aiohttp_mock.py  test__http_response_iterator.py  test_netrc_auth.py
simple_repository_server/tests/api/: test_simple_router.py
simple_repository_server/tests/integration/: test_repo_dependency_injection.py
simple_repository_server/tests/unit/: __init__.py  test_entrypoint_loading.py  test_utils.py
