# Copyright (C) 2023, CERN
# This software is distributed under the terms of the MIT
# licence, copied verbatim in the file "LICENSE".
# In applying this license, CERN does not waive the privileges and immunities
# granted to it by virtue of its status as Intergovernmental Organization
# or submit itself to any jurisdiction.

[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-repository-server"
dynamic = ["version"]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
authors = [
    {name = "Phil Elson"},
    {name = "Ivan Sinkarenko"},
    {name = "Francesco Iannaccone"},
    {name = "Wouter Koorn"},
]
dependencies = [
  "httpx",
  "fastapi>=0.100.0",
  "packaging",
  "uvicorn[standard]",
  "simple-repository>=0.10.0",
]
readme = "README.md"
description = "A tool for running a PEP-503 simple Python package repository, including features such as dist metadata (PEP-658) and JSON API (PEP-691)"

[project.urls]
Homepage = "https://github.com/simple-repository/simple-repository-server"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest_asyncio",
  "pytest_httpx",
  "starlette>=0.26.1",
  "pytest_httpserver",
]
dev = [
  "simple-repository-server[test]",
]

[project.scripts]
simple-repository-server = "simple_repository_server.__main__:main"
[tool.setuptools_scm]
version_file = "simple_repository_server/_version.py"

[tool.isort]
py_version = 39
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
force_sort_within_sections = true

[tool.mypy]
python_version = "3.11"
exclude = "simple_repository_server/tests"
ignore_missing_imports = false
strict = true

[tool.setuptools.packages.find]
namespaces = false
